<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/negro"
    tools:context=".BaseDatos">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="525dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/nombre"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/Nombre_completo"

            android:minHeight="48dp"
            android:textColorHint="#757575" />

        <EditText
            android:id="@+id/edad"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/Edad"

            android:minHeight="48dp"
            android:textColorHint="#757575" />

        <Button
            android:id="@+id/guardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guardar_registro" />

        <Button
            android:id="@+id/eliminar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eliminar_registro" />

        <Button
            android:id="@+id/update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/actualziar_registro" />

        <Button
            android:id="@+id/leerb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leer_registros" />

        <TextView
            android:id="@+id/contenidob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aqui_se_despliegan_los_registros" />

        <Button
            android:id="@+id/atras"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="return" />

    </LinearLayout>
</RelativeLayout>